# lp-foundations

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
life_expectancy/: cleaning.py  context.py  data.py  manage.py  pipeline.py  pipelines.py  strategy.py
life_expectancy/data/: eurostat_life_expect.json  pt_life_expectancy.csv  pt_life_expectancy_json_expected.csv
life_expectancy/tests/: conftest.py  test_cleaning.py  test_context.py  test_data.py  test_manage.py  test_pipeline.py  test_pipelines.py  test_stragegy.py
life_expectancy/tests/fixtures/: eurostat_life_expect_fixture.json  eurostat_life_raw_fixture.json
